--- a/s.css
+++ b/s.css
@@ -31,7 +31,8 @@ li {
 .intro,
 .intro-header,
 .list-container,
-.task {
+.task,
+.list-item {
     display: flex;
 }
 
@@ -125,8 +126,13 @@ li {
     background: #12eb90;
 }
 
+.show-tasks {
+    width: 100%;
+}
+
 .list-container {
-    width: 700px;
+    max-width: 700px;
+    margin: auto;
     flex-direction: column;
     gap: 3px;
     background: transparent;
@@ -134,7 +140,6 @@ li {
 
 .list-item {
     height: 2.5rem;
-    display: flex;
     align-items: center;
     background-color: var(--white);
     color: #001510;
@@ -168,10 +173,6 @@ li {
     transition: .3s ease-in-out;
 }
 
-/* 
-    ======================================================================================
-*/
-
 .spanHidden {
     display: none;
     /* color: #686869; */
@@ -189,9 +190,6 @@ li {
     margin-right: 1rem;
 }
 
-/* 
-    ======================================================================================
-*/
 
 .btnLi {
     /* the line below will place the button to the far right position*/
@@ -208,12 +206,6 @@ li {
     color: var(--white);
 }
 
-/* 
-    ======================================================================================
-*/
-
-
-/* JS classes */
 .msgPanel {
     background-color: white;
     height: 100px;
@@ -259,4 +251,66 @@ li {
 .para {
     align-self: center;
     font: normal 500 1rem 'Open Sans', sans-serif;
+}
+
+@media (max-width: 520px) {
+    .wrapper {
+        width: 95%;
+    }
+
+    .intro {
+        width: 100%;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        padding: 0 1rem;
+    }
+
+    .intro-header {
+        order: 2;
+    }
+
+    .intro-date {
+        order: 1;
+    }
+
+    .task-input,
+    .input-btn {
+        padding: 0 1rem;
+        font-size: .9rem;
+    }
+
+    .task {
+        width: 100%;
+        margin: auto;
+    }
+
+    .task-input {
+        width: 100%;
+        height: 100%;
+        flex: 1;
+        background-color: inherit;
+        color: var(--dark-grey);
+        font-weight: 400;
+    }
+
+    .input-btn {
+        height: 100%;
+        cursor: pointer;
+        color: var(--white);
+        font-weight: 500;
+        background: #049a5b;
+        transition: .5s ease-in-out;
+    }
+
+    .show-tasks {
+        width: 90%;
+        margin: auto;
+    }
+
+    .list-item {
+        height: auto;
+        line-height: 1.6;
+        padding: 1rem 0;
+    }
 }
